k8s/app/grafana/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iot-http-redirect
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: bricklou-http-sans
      namespace: traefik
  hostnames:
    - iot.bricklou.ovh
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 302

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iot
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: bricklou-https-sans
      namespace: traefik
  hostnames:
    - iot.bricklou.ovh
  rules:
    - backendRefs:
        - name: grafana
          namespace: grafana
          port: 80
          weight: 1
          kind: Service
